final CERN preprint version
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@6993 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/combined/combined_cern.tex
+++ b/2012/3papers/combined/combined_cern.tex
@@ -29,26 +29,16 @@
 
 \begin{titlepage}
 
-
 \renewcommand{\EXPLOGO}{fig/logo_totem_black.pdf}
 
-\PHnumber{2012-TODO}
-\PHdate{TODO}
+\PHnumber{2012-XXX}
+\PHdate{XX November 2012}
 
-\EXPnumber{TOTEM 2012-TODO}
-\EXPdate{TODO}
+\EXPnumber{TOTEM 2012-003}
+\EXPdate{22 November 2012}
 
 \title{Luminosity-independent measurements of total, elastic and inelastic cross-sections at $\sqrt{s}$ = 7\,TeV}
 \ShortTitle{Luminosity-independent measurements of total, elastic and inelastic cross-sections at $\sqrt{s}$ = 7\,TeV}
-
-%%%%% TODO: remove %%%%%
-\def\year{2012}
-\vbox to0pt{%
-\vss
-\centerline{\vbox{\hrule\hbox{\vrule\vrule width0pt depth10pt height15pt\qquad DRAFT FROM \today{}\qquad\vrule}\hrule}}
-\vskip5cm
-}
-%%%%%%%%%%%%%%%%%%%%%%%%
 
 \Collaboration{The TOTEM Collaboration}
 \ShortAuthor{The TOTEM Collaboration (G.~Antchev \emph{\etal})}
@@ -157,9 +147,9 @@ J.~Whitmore\Iref{10}
 
 \newpage
 \begin{abstract}
-The TOTEM experiment at the LHC has performed the first luminosity-independent determination of the total proton-proton cross-section at $\sqrt{s} = 7\un{TeV}$. This technique is based on the optical theorem and requires simultaneous measurements of the inelastic rate -- accomplished with the forward charged-particle telescopes T1 and T2 in the range $5.3 < |\eta| < 6.4$ -- and of the elastic rate by detecting the outcoming protons with Roman Pot detectors. The data presented here were collected in a dedicated run in 2011 with special beam optics ($\beta^{*} = 90\un{m}$) and Roman Pots approaching the beam close enough to register elastic events with squared four-momentum transfers $|t|$ as low as $5 \cdot 10^{-3}\,\un{GeV^{2}}$. The luminosity-independent results for the elastic, inelastic and total cross-sections are $\sigma_{\rm el} = (25.1\pm 1.1)\un{mb}$, $\sigma_{\rm inel} = (72.9\pm 1.5)\un{mb}$ and $\sigma_{\rm tot} = (98.0\pm 2.5)\un{mb}$, respectively. At the same time this method delivers the integrated luminosity, in agreement with measurements by CMS.
+The TOTEM experiment at the LHC has performed the first luminosity-independent determination of the total proton-proton cross-section at $\sqrt{s} = 7\un{TeV}$. This technique is based on the optical theorem and requires simultaneous measurements of the inelastic rate -- accomplished with the forward charged-particle telescopes T1 and T2 in the range $3.1 < |\eta| < 6.5$ -- and of the elastic rate by detecting the outcoming protons with Roman Pot detectors. The data presented here were collected in a dedicated run in 2011 with special beam optics ($\beta^{*} = 90\un{m}$) and Roman Pots approaching the beam close enough to register elastic events with squared four-momentum transfers $|t|$ as low as $5 \cdot 10^{-3}\,\un{GeV^{2}}$. The luminosity-independent results for the elastic, inelastic and total cross-sections are $\sigma_{\rm el} = (25.1\pm 1.1)\un{mb}$, $\sigma_{\rm inel} = (72.9\pm 1.5)\un{mb}$ and $\sigma_{\rm tot} = (98.0\pm 2.5)\un{mb}$, respectively. At the same time this method yields the integrated luminosity, in agreement with measurements by CMS.
 
-TOTEM also exploited two complementary ways of determining the total cross-section, both using the CMS luminosity measurement as an input. The first method sums the elastic and inelastic cross-sections and thus does not depend on the $\rho$ parameter. The second applies the optical theorem to the elastic-scattering measurements only and therefore is free of the T1 and T2 measurement uncertainties. The methods, having very different systematic dependences, give results in excellent agreement. Moreover, the $\rho$-independent measurement makes a first estimate for the $\rho$ parameter at $\sqrt{s} = 7\un{TeV}$ possible: $|\rho| = 0.145 \pm 0.091$.
+TOTEM has also determined the total cross-section in two complementary ways, both using the CMS luminosity measurement as an input. The first method sums the elastic and inelastic cross-sections and thus does not depend on the $\rho$ parameter. The second applies the optical theorem to the elastic-scattering measurements only and therefore is free of the T1 and T2 measurement uncertainties. The methods, having very different systematic dependences, give results in excellent agreement. Moreover, the $\rho$-independent measurement makes a first estimate for the $\rho$ parameter at $\sqrt{s} = 7\un{TeV}$ possible: $|\rho| = 0.145 \pm 0.091$.
 \end{abstract}
 \end{titlepage}
 
@@ -194,7 +184,7 @@ $\sigma_{\rm el}$   & $\rm[mb]$ & $\qquad24.8$ & $\pm 1.2$   &   $25.4$ & $\pm 0
 }
 
 \def\TabLumi{%
-\begin{table*}
+\begin{table*}[h!]
 \caption{The integrated luminosities for the October and June data sets as determined by different experiments and different methods.}
 \label{tab:lumi}
 \begin{center}
@@ -217,7 +207,7 @@ June	& TOTEM, Eq.~(\ref{eq:lumi jun el}) 	& $\S1.65 \pm 0.07$\cr
 \includegraphics{fig/sigma_tot_el_inel_cmp_big_cern.pdf}
 %\vskip-5mm
 \caption{Left: the dependences of total, inelastic and elastic cross-sections on the scattering energy $\sqrt s$. The continuous black lines (lower for $\rm pp$, upper for $\rm \bar pp$) represent the best fits of the total cross-section data by the COMPETE collaboration \cite{compete}. The dashed line results from a fit of the elastic scattering data. The dash-dotted curves correspond to the inelastic cross-section and were obtained as the difference between the continuous and dashed fits.\hfil\break
-Right: measurements of total, inelastic and elastic cross-sections at $\sqrt s = 7\un{TeV}$. The circles represent the four TOTEM measurements summarized in Tab.~\ref{tab:cs} (weighted mean given by the dotted line), the other points show the measurements of other LHC collaborations.}
+Right: measurements of total, inelastic and elastic cross-sections at $\sqrt s = 7\un{TeV}$. The circles represent the four TOTEM measurements summarized in Table~\ref{tab:cs} (weighted mean given by the dotted line), the other points show the measurements of other LHC collaborations.}
 \label{fig:cs}
 \end{center}
 %\vskip-10mm
@@ -229,7 +219,7 @@ Right: measurements of total, inelastic and elastic cross-sections at $\sqrt s =
 \begin{center}
 \includegraphics{fig/sigma_el_to_sigma_tot.pdf}
 %\vskip-5mm
-\caption{The ratio of the elastic to total cross-section as a function of the scattering energy $\sqrt s$. The dashed line shows the ratio of the $\sigma_{\rm el}(s)$ and $\sigma_{\rm tot}(s)$ fits from Fig.~\ref{fig:cs}.
+\caption{The ratio of the elastic to total cross-section as a function of the scattering energy $\sqrt s$. The dashed line shows the ratio of the $\sigma_{\rm el}(s)$ and $\sigma_{\rm tot}(s)$ fits from Figure~\ref{fig:cs}.
 }
 \label{fig:sigma rat}
 \end{center}
@@ -245,25 +235,26 @@ The TOTEM experiment has recently published \cite{epl96,P1} the differential cro
 	\sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_{t=0}\ ,\qquad
 	\sigma_{\rm inel} = \sigma_{\rm tot} - \sigma_{\rm el}\ .
 \end{equation}
-%The results for the low-luminosity measurement \cite{epl96} and the higher-luminosity measurement \cite{P1} are summarized in Tab.~\ref{tab:cs}.
+%The results for the low-luminosity measurement \cite{epl96} and the higher-luminosity measurement \cite{P1} are summarized in Table~\ref{tab:cs}.
 All these cross-sections are exclusively based on the measurement of the elastic scattering cross-section.
 
-Moreover, taking advantage of the two trigger-capable forward charged-particle telescopes T1 and T2, the inelastic cross-section was also directly measured \cite{P2} using the same data set as in \cite{P1}. A small Monte-Carlo correction ($\approx 4\%$) was applied to account for the invisible events in the very forward direction $|\eta| > 6.5$, mainly due to low-mass single diffraction. The cross-sections values with their systematic uncertainties are summarized in Tab.~\ref{tab:cs}.
+Moreover, taking advantage of the two trigger-capable forward charged-particle telescopes T1 and T2, the inelastic cross-section was also directly measured \cite{P2} using the same data set as in \cite{P1}. A small Monte-Carlo correction ($\approx 4\%$) was applied to account for the invisible events in the very forward direction $|\eta| > 6.5$, mainly due to low-mass single diffraction. The cross-sections values with their systematic uncertainties are summarized in Table~\ref{tab:cs}.
 
 The excellent agreement between the two completely different measurements of the inelastic cross-sections confirms the understanding of the systematic uncertainties and corrections applied in both methods. Taking maximum advantage of the two measurements by combining them in different ways allows extracting more information from the data, such as:
+\vspace*{-11pt}
 \begin{itemize}
-\setlength{\topskip}{0pt}%
-\setlength{\itemsep}{0pt}%
+%\setlength{\partopsep}{0pt}%
+%\setlength{\topsep}{0pt}%
+\setlength{\itemsep}{-4pt}%
 \item luminosity-independent cross-sections,
 \item luminosity determination,
 \item $\rho$-independent cross-sections,
 \item luminosity- and $\rho$-independent cross-section ratios,
 \item $\rho$ constraints.
 \end{itemize}
-
-The results presented in this article are obtained from the data collected in October 2011 (for details see Tab.~1 in \cite{P1}).
-%That run was split into three datasets with Roman Pot detectors at different positions (for details see Tab.~1 in \cite{P1}). All calculations were done independently for these three datasets, showing an excellent match. Therefore only the results for the three datasets combined will be given below.
-For completeness, some of the results will be compared to those of the lower-luminosity run from June 2011 \cite{epl96}, where only the elastic part of the analysis could be performed.
+\vspace*{-4pt}
+%
+The results presented in this article are obtained from the data collected in October 2011 (for details see Table~1 in \cite{P1}). For completeness, some of the results will be compared to those of the lower-luminosity run from June 2011 \cite{epl96}, where only the elastic part of the analysis could be performed.
 
 
 %--------------------------------------------------
@@ -274,7 +265,7 @@ Using the optical theorem, one can combine the elastic measurements from \cite{P
 \label{eq:m lumi indep}
 	\sigma_{\rm tot} = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, {\d N_{\rm el}/\d t|_{t=0} \over N_{\rm el} + N_{\rm inel} }\ ,
 \end{equation}
-where $N_{\rm el}$ and $N_{\rm inel}$ stand for rates integrated over the run period. Taking $\rho = 0.141\pm 0.007$ from the COMPETE extrapolation \cite{compete} yields the luminosity-independent total cross-section, see Tab.~\ref{tab:cs}. Furthermore, using the measured ratio $N_{\rm el} / N_{\rm inel}$, also the elastic and inelastic cross-sections can be derived independently from the luminosity. These cross-sections are given in Tab.~\ref{tab:cs} with their uncertainty compositions.
+where $N_{\rm el}$ and $N_{\rm inel}$ stand for rates integrated over the run period. Taking $\rho = 0.141\pm 0.007$ from the COMPETE extrapolation \cite{compete} yields the luminosity-independent total cross-section, see Table~\ref{tab:cs}. Furthermore, using the measured ratio $N_{\rm el} / N_{\rm inel}$, also the elastic and inelastic cross-sections can be derived independently from the luminosity. These cross-sections are given in Table~\ref{tab:cs} with their uncertainty compositions.
 
 \TabCS
 
@@ -288,7 +279,7 @@ The optical theorem can also be applied in a complementary way such that the lum
 \label{eq:lumi oct}
 {\cal L_{\rm int}} = {1 + \rho^2 \over 16\pi\, (\hbar c)^2}\, { (N_{\rm el} + N_{\rm inel})^2 \over \d N_{\rm el}/\d t|_{t=0} }\ .
 \end{equation}
-Thus, integrating the rates over the data-taking period during which the elastic \cite{P1} and inelastic \cite{P2} interactions have independently but simultaneously been measured, the integrated luminosity ${\cal L}_{\rm int}$ is obtained. Using the above $\rho$ value, the luminosity determined by TOTEM for the October run is compared in Tab.~\ref{tab:lumi} to the one obtained by CMS in a completely different way. Both measurements agree well within their uncertainties.
+Thus, integrating the rates over the data-taking period during which the elastic \cite{P1} and inelastic \cite{P2} interactions have independently but simultaneously been measured, the integrated luminosity ${\cal L}_{\rm int}$ is obtained. Using the above $\rho$ value, the luminosity determined by TOTEM for the October run is compared in Table~\ref{tab:lumi} to the one obtained by CMS in a completely different way. Both measurements agree well within their uncertainties.
 
 
 Once the cross-section of a process is known, it can be, in general, used for luminosity determination. In particular, knowing the total and elastic cross-sections, the integrated luminosity of the earlier June run \cite{epl96} has been calculated from the elastic scattering rates $\d N_{\rm el}/\d t|_{t=0}$ and $N_{\rm el}$, which are of course highly correlated:
@@ -300,7 +291,7 @@ Once the cross-section of a process is known, it can be, in general, used for lu
 \label{eq:lumi jun el}
 {\cal L}_{\rm int}^{\rm June} = {N_{\rm el}^{\rm June}\over \sigma_{\rm el}}\ .
 \end{equation}
-The luminosity-independent values for the total and elastic cross-sections (see Tab.~\ref{tab:cs}) yield the integrated luminosities for the June run, which are again in excellent agreement with the CMS results, see Tab.~\ref{tab:lumi}.
+The luminosity-independent values for the total and elastic cross-sections (see Table~\ref{tab:cs}) yield the integrated luminosities for the June run, which are again in excellent agreement with the CMS results, see Table~\ref{tab:lumi}.
 
 \TabLumi
 
@@ -312,7 +303,7 @@ $\rho$ enters into the equations when the optical theorem is used. However, a $\
 \label{eq:m rho indep}
 \sigma_{\rm tot} = \sigma_{\rm el} + \sigma_{\rm inel}\ .
 \end{equation}
-These $\rho$-independent cross-sections (see Tab.~\ref{tab:cs}) have a larger uncertainty due to the direct propagation of the luminosity uncertainty which, however, cancels for the cross-section ratios
+These $\rho$-independent cross-sections (see Table~\ref{tab:cs}) have a larger uncertainty due to the direct propagation of the luminosity uncertainty which, however, cancels for the cross-section ratios
 $$
 {\sigma_{\rm el} \over \sigma_{\rm inel}} = 0.345 \pm 0.009\ ,\qquad {\sigma_{\rm el}\over \sigma_{\rm tot}} = 0.257 \pm 0.005\ .
 $$
@@ -331,18 +322,18 @@ Note that this is a direct measurement at $\sqrt s = 7\un{TeV}$, not an extrapol
 %--------------------------------------------------
 \section{Comparison with other experiments}
 
-The total, elastic and inelastic cross-section values obtained with different methods and data sets (summarized in Tab.~\ref{tab:cs}) show excellent agreement. In particular, the inelastic cross-sections from two completely independent measurements, once determined from the elastic measurement with the Roman Pot detectors and once directly from the more central charged-particle telescopes, agree remarkably well with each other and also with the ALICE \cite{alice_inel}, ATLAS \cite{atlas_inel} and CMS \cite{cms_inel} results (see Fig.~\ref{fig:cs} right).
+The total, elastic and inelastic cross-section values obtained with different methods and data sets (summarized in Table~\ref{tab:cs}) show excellent agreement. In particular, the inelastic cross-sections from two completely independent measurements, once determined from the elastic measurement with the Roman Pot detectors and once directly from the more central charged-particle telescopes, agree remarkably well with each other and also with the ALICE \cite{alice_inel}, ATLAS \cite{atlas_inel} and CMS \cite{cms_inel} results (see Figure~\ref{fig:cs} right).
 
-The energy dependence of the proton-(anti)proton cross-sections is shown in Fig.~\ref{fig:cs} left. The best fit of $\sigma_{\rm tot}(s)$ by the COMPETE Collaboration \cite{compete} (published before the TOTEM result) describes the energy dependence well even up to the highest energies measured.  
+The energy dependence of the proton-(anti)proton cross-sections is shown in Figure~\ref{fig:cs} left. The best fit of $\sigma_{\rm tot}(s)$ by the COMPETE Collaboration \cite{compete} (published before the TOTEM result) describes the energy dependence well even up to the highest energies measured.
 
-The ratio $\sigma_{\rm el}/\sigma_{\rm tot}$ can give some insights into the shape and the opacity of the proton, subject to model-dependent theoretical interpretations. The steady rise of this ratio with energy (Fig.~\ref{fig:sigma rat}) is often interpreted as the increase of proton size and opacity with energy. 
+The ratio $\sigma_{\rm el}/\sigma_{\rm tot}$ can give some insights into the shape and the opacity of the proton, subject to model-dependent theoretical interpretations. The steady rise of this ratio with energy (Figure~\ref{fig:sigma rat}) is often interpreted as the increase of proton size and opacity with energy. 
 
 \FigRatio
 
 %--------------------------------------------------
 \section{Relevance for cosmic-ray measurements}
 
-The LHC energy begins to overlap with the energy range where large area cosmic ray showers are studied (see Fig.~\ref{fig:cs}). Investigations of high-energy proton-proton interactions at the LHC are therefore of high importance for the study of the development of cosmic ray showers in the atmosphere and thus for high-energy cosmic ray interpretations, like e.g.~the energy spectrum and particle composition \cite{enterria}.  The most important observable is the shower maximum $X_{\rm max}$ which is related to the primary particle mass. It strongly depends on the inelastic $\rm p$-air cross-section. It is worth mentioning that calculations of hadron-nucleus cross-sections in the Glauber-Gribov formalism \cite{nagano,glauber} require the knowledge of not only the inelastic $\rm pp$ cross-section but also the proton-proton elastic scattering amplitude in the small $|t|$-range. The latest Auger measurement of the inelastic cross-section at $\sqrt s = 57\un{TeV}$ \cite{auger} (Fig.~\ref{fig:cs}) used the TOTEM cross-section values as an input. In addition, all kinds of diffractive phenomena influence the development of the shower cascade and the multiplicity fluctuations of secondary hadrons. Thus the measurements of the $\rm pp$ cross-sections and the particle flow are of high importance for the interpretation of cosmic ray showers.
+The LHC energy begins to overlap with the energy range where large area cosmic ray showers are studied (see Figure~\ref{fig:cs}). Investigations of high-energy proton-proton interactions at the LHC are therefore of high importance for the study of the development of cosmic ray showers in the atmosphere and thus for high-energy cosmic ray interpretations, like e.g.~the energy spectrum and particle composition \cite{enterria}.  The most important observable is the shower maximum $X_{\rm max}$ which is related to the primary particle mass. It strongly depends on the inelastic $\rm p$-air cross-section. It is worth mentioning that calculations of hadron-nucleus cross-sections in the Glauber-Gribov formalism \cite{nagano,glauber} require the knowledge of not only the inelastic $\rm pp$ cross-section but also the proton-proton elastic scattering amplitude in the small $|t|$-range. The latest Auger measurement of the inelastic cross-section at $\sqrt s = 57\un{TeV}$ \cite{auger} (Figure~\ref{fig:cs}) used the TOTEM cross-section values as an input. In addition, all kinds of diffractive phenomena influence the development of the shower cascade and the multiplicity fluctuations of secondary hadrons. Thus the measurements of the $\rm pp$ cross-sections and the particle flow are of high importance for the interpretation of cosmic ray showers.
 
 %--------------------------------------------------
 \section{Final remark}
@@ -385,7 +376,7 @@ Finland, the OTKA grant NK 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungar
 
 \bibitem{P2} 
 	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
+	\REVIEW{Europhys.~Lett.}{XX}{2012}{XXXXX}
 
 %\bibitem{epl95}
 %    %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
@@ -419,8 +410,8 @@ Finland, the OTKA grant NK 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungar
 	%arXiv:1205.3142
 	\Name{CMS collaboration}
 	CMS-PAS-FWD-11-001 and
-	CMS-PAS-QCD-11-002
-	%CERN-PH-EP-2012-293
+	%CMS-PAS-QCD-11-002
+	CERN-PH-EP-2012-293
 
 \bibitem{auger}
 %title = {Measurement of the Proton-Air Cross Section at $\sqrt{s}\mathbf{=}57\text{\,}\text{\,}\mathrm{TeV}$ with the Pierre Auger Observatory},
