final CERN preprint numbers inserted
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@6997 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/7TeV three papers/elastic/elastic_cern.tex
+++ b/2012/7TeV three papers/elastic/elastic_cern.tex
@@ -656,12 +656,12 @@ Finland, the OTKA grant NK 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungar
 \bibitem{P2} 
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	%\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
-	to be published
+	CERN-PH-EP-2012-352
 
 \bibitem{P3} 
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	%\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
-	to be published
+	CERN-PH-EP-2012-353
 
 \bibitem{jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
