final CERN preprint numbers inserted
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@6998 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/7TeV three papers/combined/combined_epl.tex
+++ b/2012/7TeV three papers/combined/combined_epl.tex
@@ -361,10 +361,9 @@ Finland, the OTKA grant NK 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungar
 
 \bibitem{P2} 
 	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
-	{\it  Measurement of proton-proton inelastic scattering cross-section at $\sqrt s = 7\un{TeV}$},
-	%CERN-PH-EP-2012-xxx, xxx 2012
-	%\REVIEW{Europhys.~Lett.}{XX}{2012}{XXXXX}
-	to be published
+	%\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
+	%{\it  Measurement of proton-proton inelastic scattering cross-section at $\sqrt s = 7\un{TeV}$},
+	CERN-PH-EP-2012-352
 
 %\bibitem{epl95}
 %    %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
