--- a/2012/7TeV three papers/combined/combined_cern.tex
+++ b/2012/7TeV three papers/combined/combined_cern.tex
@@ -31,10 +31,10 @@
 
 \renewcommand{\EXPLOGO}{fig/logo_totem_black.pdf}
 
-\PHnumber{2012-XXX}
-\PHdate{XX November 2012}
+\PHnumber{2012-353}
+\PHdate{29 November 2012}
 
-\EXPnumber{TOTEM 2012-003}
+\EXPnumber{TOTEM 2012-004}
 \EXPdate{22 November 2012}
 
 \title{Luminosity-independent measurements of total, elastic and inelastic cross-sections at $\sqrt{s}$ = 7\,TeV}
@@ -376,10 +376,9 @@ Finland, the OTKA grant NK 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungar
 
 \bibitem{P2} 
 	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
-	{\it  Measurement of proton-proton inelastic scattering cross-section at $\sqrt s = 7\un{TeV}$},
-	%CERN-PH-EP-2012-xxx, xxx 2012
-	%\REVIEW{Europhys.~Lett.}{XX}{2012}{XXXXX}
-	to be published
+	%\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
+	%{\it  Measurement of proton-proton inelastic scattering cross-section at $\sqrt s = 7\un{TeV}$},
+	CERN-PH-EP-2012-352
 
 %\bibitem{epl95}
 %    %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
