hungarian grants updated, two more people added to the author list
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@7000 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/7TeV three papers/combined/combined_cern.tex
+++ b/2012/7TeV three papers/combined/combined_cern.tex
@@ -63,6 +63,7 @@ C.~Covault\Iref{9},
 M.~Csan\'{a}d\IAref{4}{e},
 T.~Cs\"{o}rg\H{o}\Iref{4},
 M.~Deile\Iref{8},
+M.~Doubek\Iref{1b},
 K.~Eggert\Iref{9},
 V.~Eremin\Aref{b},
 R.~Ferretti\IIref{6a}{6b},
@@ -118,8 +119,9 @@ C.~Taylor\Iref{9},
 N.~Turini\Iref{7b},
 V.~Vacek\Iref{1b},
 M.~V\'itek\Iref{1b},
-J.~Welti\IIref{3a}{3b} and 
-J.~Whitmore\Iref{10}
+J.~Welti\IIref{3a}{3b}
+J.~Whitmore\Iref{10} and
+P.~Wyszkowski\IAref{8}{g}
 \end{Authlist}
 
 \Instline{1a}{Institute of Physics of the Academy of Sciences of the Czech Republic, Praha, Czech Republic.}
@@ -144,6 +146,7 @@ J.~Whitmore\Iref{10}
 \Anotfoot{d}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}
 \Anotfoot{e}{Department of Atomic Physics, E\"otv\"os University, Hungary.}
 \Anotfoot{f}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
+\Anotfoot{g}{AGH University of Science and Technology, Cracow, Poland.}
 
 \newpage
 \begin{abstract}
@@ -357,7 +360,7 @@ We thank S.~Ostapchenko and R.~Ulrich for valuable discussions on the cosmic-ray
 
 This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus
 Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of
-Finland, the OTKA grant NK 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
+Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
 
 %--------------------------------------------------
 %\vskip-3mm
