--- a/2012/7TeV three papers/combined/combined_epl.tex
+++ b/2012/7TeV three papers/combined/combined_epl.tex
@@ -24,6 +24,7 @@ G.~Antchev\thanksInst{1}
 \and M.~Csan\'{a}d\inst{4}\thanksInst{5}
 \and T.~Cs\"{o}rg\H{o}\inst{4}
 \and M.~Deile\inst{8}
+\and M.~Doubek\inst{1b}
 \and K.~Eggert\inst{9}
 \and V.~Eremin\thanksInst{2}
 \and R.~Ferretti\inst{6a,6b}
@@ -81,6 +82,7 @@ G.~Antchev\thanksInst{1}
 \and M.~V\'itek\inst{1b}
 \and J.~Welti\inst{3a,3b}
 \and J.~Whitmore\inst{10}
+\and P.~Wyszkowski\inst{8}\thanksInst{7}
 }
 
 \shortauthor{The TOTEM Collaboration (G.~Antchev \etal)}
@@ -108,6 +110,7 @@ G.~Antchev\thanksInst{1}
 \thanksRef{4}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}
 \thanksRef{5}{Department of Atomic Physics, E\"otv\"os University, Hungary.}
 \thanksRef{6}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
+\thanksRef{7}{AGH University of Science and Technology, Cracow, Poland.}
 }
 
 \pacs{13.60.Hb}{Total and inclusive cross sections (including deep-inelastic processes)}
@@ -342,7 +345,7 @@ We thank S.~Ostapchenko and R.~Ulrich for valuable discussions on the cosmic-ray
 
 This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus
 Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of
-Finland, the OTKA grant NK 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
+Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
 
 %--------------------------------------------------
 %\vskip-3mm
