--- a/2012/7TeV three papers/elastic/elastic_epl.tex
+++ b/2012/7TeV three papers/elastic/elastic_epl.tex
@@ -636,7 +636,7 @@ We are grateful to CMS for providing their luminosity measurements.
 
 This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus
 Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of
-Finland, the OTKA grant NK 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
+Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
 
 
 %--------------------------------------------------
