references reshuffled following the comment of S. Ostapchenko
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@7005 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/7TeV three papers/combined/combined_epl.tex
+++ b/2012/7TeV three papers/combined/combined_epl.tex
@@ -321,7 +321,7 @@ The ratio $\sigma_{\rm el}/\sigma_{\rm tot}$ can give some insights into the sha
 %--------------------------------------------------
 \section{Relevance for cosmic-ray measurements}
 
-The LHC energy begins to overlap with the energy range where large area cosmic ray showers are studied (see Figure~\ref{fig:cs}). Investigations of high-energy proton-proton interactions at the LHC are therefore of high importance for the study of the development of cosmic ray showers in the atmosphere and thus for high-energy cosmic ray interpretations, like e.g.~the energy spectrum and particle composition \cite{enterria}.  The most important observable is the shower maximum $X_{\rm max}$ which is related to the primary particle mass. It strongly depends on the inelastic $\rm p$-air cross-section. It is worth mentioning that calculations of hadron-nucleus cross-sections in the Glauber-Gribov formalism \cite{nagano,glauber} require the knowledge of not only the inelastic $\rm pp$ cross-section but also the proton-proton elastic scattering amplitude in the small $|t|$-range. The latest Auger measurement of the inelastic cross-section at $\sqrt s = 57\un{TeV}$ \cite{auger} (Figure~\ref{fig:cs}) used the TOTEM cross-section values as an input. In addition, all kinds of diffractive phenomena influence the development of the shower cascade and the multiplicity fluctuations of secondary hadrons. Thus the measurements of the $\rm pp$ cross-sections and the particle flow are of high importance for the interpretation of cosmic ray showers.
+The LHC energy begins to overlap with the energy range where large area cosmic ray showers are studied (see Figure~\ref{fig:cs}). Investigations of high-energy proton-proton interactions at the LHC are therefore of high importance for the study of the development of cosmic ray showers in the atmosphere and thus for high-energy cosmic ray interpretations, like e.g.~the energy spectrum and particle composition \cite{nagano}.  The most important observable is the shower maximum $X_{\rm max}$ which is related to the primary particle mass. It strongly depends on the inelastic $\rm p$-air cross-section. It is worth mentioning that calculations of hadron-nucleus cross-sections in the Glauber-Gribov formalism \cite{glauber, gribov} require the knowledge of not only the inelastic $\rm pp$ cross-section but also the proton-proton elastic scattering amplitude in the small $|t|$-range. The latest Auger measurement of the inelastic cross-section at $\sqrt s = 57\un{TeV}$ \cite{auger} (Figure~\ref{fig:cs}) used the TOTEM cross-section values as an input. In addition, all kinds of diffractive phenomena influence the development of the shower cascade and the multiplicity fluctuations of secondary hadrons \cite{enterria}. Thus the measurements of the $\rm pp$ cross-sections and the particle flow are of high importance for the interpretation of cosmic ray showers.
 
 %--------------------------------------------------
 \section{Final remark}
@@ -413,10 +413,6 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	\Name{Nakamura K.~\etal{} (Particle Data Group)}
 	\REVIEW{J.~Phys.}{G37}{2010}{075021}
 
-\bibitem{enterria}
-	\Name{d'Enterria D.~\etal}
-	\REVIEW{Astropart.~Phys.}{35}{2011}{98}
-
 \bibitem{nagano}
 	\Name{Nagano M.~and Watson A.~A.}
 	\REVIEW{Rev.~Mod.~Phys.}{72}{2000}{689}
@@ -424,6 +420,14 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 \bibitem{glauber}
 	\Name{Glauber R.~J.}
 	Lectures in Theoretical Physics, ed. by W.~E.~Britten (Interscience, NY,1959) v.1, p. 315
+
+\bibitem{gribov}
+	\Name{Gribov V.~N.}
+	\REVIEW{Sov.~Phys.~JETP}{29}{1969}{483}
+
+\bibitem{enterria}
+	\Name{d'Enterria D.~\etal}
+	\REVIEW{Astropart.~Phys.}{35}{2011}{98}
 
 \end{thebibliography}
 
